[metadata]
name = certbot-dns-stackit
version = attr: PACKAGE_VERSION
description = STACKIT DNS Authenticator plugin for Certbot
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/stackitcloud/certbot-dns-stackit
author = STACKIT DNS
author_email = dns@stackit.cloud
license = Apache License 2.0
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Plugins
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Internet :: WWW/HTTP
    Topic :: Security
    Topic :: System :: Installation/Setup
    Topic :: System :: Networking
    Topic :: System :: Systems Administration
    Topic :: Utilities
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*

[options]
packages = find:
include_package_data = True
install_requires =
    acme>=2.6.0
    certbot>=2.6.0
    setuptools
    requests
    mock
    requests-mock
    mypy
    mypy-extensions
    types-requests
    types-urllib3
    flake8
    pydocstyle
    black
    click==8.3.0
    coverage
    PyJWT==2.10.1

[options.entry_points]
certbot.plugins =
    dns-stackit = certbot_dns_stackit.stackit:Authenticator

[options.packages.find]
exclude =
    tests*
